# async-http-codec

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
examples/: echo-client.html  echo-server.rs  echo_server.rs  head.rs  simple-server.rs
src/: buffer_write.rs  io_future.rs  lib.rs  util.rs
src/body/: common.rs  decode.rs  encode.rs  mod.rs  parse.rs
src/head/: common.rs  decode.rs  encode.rs  mod.rs
src/head/request/: decode.rs  encode.rs  mod.rs
src/head/response/: decode.rs  encode.rs  mod.rs
src/head/response/status_line/: encode.rs  mod.rs
src/internal/: buffer_decode.rs  buffer_write.rs  dec_helpers.rs  enc_helpers.rs  io_future.rs  mod.rs  parse_helper.rs  terminator.rs
src/request/head/: mod.rs  parse.rs  test.rs
src/response/: mod.rs
src/response/head/: mod.rs  parse.rs  test.rs
src/response/status_line/: mod.rs
src/transaction/server/: body_decode_with_continue.rs  mod.rs
