[package]
name = "async-http-codec"
version = "0.6.1"
edition = "2021"
description = "async HTTP 1.1 encoding and decoding"
license = "Apache-2.0 OR MIT"

[dependencies]
http = "0.2.5"
httparse = "1.7.1"
futures = "0.3.21"
anyhow = "1.0.44"
log = "0.4.14"

[dev-dependencies]
async-web-server = "0.3.0"
simple_logger = "1.13.0"
rand = "0.8.5"
smol = "1.2.5"